# negros.dev

./: .dockerignore  .gitignore  .rubocop.yml  Caddyfile  Dockerfile  Gemfile  LICENSE  Makefile  Procfile  README.md  buildspec.yml  docker-compose.yml  example.env  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.toml
.github/ISSUE_TEMPLATE/: enhancement-and-new-features.md  novos-conteudos.md  solicita--o-para-novos-recursos.md  título-da-issue.md
.github/workflows/: code_quality.yml  negrosdev-application-ci.yml  negrosdev.yaml  ruby.yml  run_rspec.yml  test.yml
.github/workflows /: run_rspec.yml
__test__/: fixtures.py
__test__/factories/: content.py
__test__/features/: user_comment_test.py  user_sign_in_test.py  visitors_search_content_test.py  visitors_view_content_test.py  visitors_view_home_test.py
__test__/request/: comment_test.py
app/: __init__.py  filters.py  forms.py  routes.py  view.py
app/controllers/: application_controller.rb  auth_controller.py  authors_controller.rb  contents_controller.py  contents_controller.rb  courses_controller.rb  errors_controller.rb  home_controller.py  home_controller.rb  pages_controller.rb  posts_controller.rb  tags_controller.rb  videos_controller.rb
app/dashboards/: category_dashboard.rb  content_dashboard.rb  resource_dashboard.rb
app/extensions/: admin.py  (+1 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb  storage.yml
db/: schema.rb  seeds.rb
scripts/: install_chrome.sh
seeds/: content.py  user.py
spec/: rails_helper.rb  spec_helper.rb
(+168 files in other folders)
